--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-DATABASE_URL=mongodb://localhost/users
+DATABASE_URL=mongodb+srv://swaraj1920:swaraj1920@cluster0.6yd9l.mongodb.net/arena22
 TOKEN_SECRET=secret
 REFRESH_TOKEN_SECRET=refreshsecret
